--- a/Sport/assets/css/style.css
+++ b/Sport/assets/css/style.css
@@ -760,5 +760,66 @@ ul.list-simple-2 li a.bif-list{background:url(../img/bif-list.png) no-repeat lef
 .read-more{-webkit-transition:all 0.2s linear;-moz-transition:all 0.2s linear;-o-transition:all 0.2s linear;-ms-transition:all 0.2s linear;transition:all 0.2s linear;}.read-more:hover{background:#DDDDDD !important;color:#8E44AD !important;}
 
 
+.banner .icons{
+	position:absolute;
+	font-size:45px;
+	width:80px;
+	color:#ffd373;
+	left:-60px;
+	margin:5px 5px;
+	z-index:500;
+	-webkit-transform:scale(1);
+	-moz-transform:scale(1);
+	transform:scale(1);
+	-webkit-transition:color 0.2s, opacity 0.7s, -webkit-transform 0.6s;
+	-moz-transition:color 0.2s, opacity 0.7s, -moz-transform 0.6s;
+	transition:color 0.2s, opacity 0.7s, transform 0.6s;
+}
+
+.banner:hover{
+    border-bottom:1px solid #dee0e5;
+	text-decoration:none;
+}
+
+.banner:hover h4{
+	color:#FFB000;
+    
+}
+
+.banner:hover p{
+	color:#FFB000;
+}
+
+.banner:hover .icons{
+	color:#63b2f5;
+    
+}
+
+.banner:hover .icons.icons-fadeout{
+	color:#FFB000;
+	-webkit-transform:scale(4);
+	-moz-transform:scale(4);
+	transform:scale(4);
+	opacity:0;
+	-moz-opacity:0;
+	-khtml-opacity:0;
+}
+
+#biuuu_button:hover .icons {
+    cursor:pointer;
+}
+#biuuu_button .icons{
+	position:absolute;
+	font-size:13px;
+    line-height:38px;
+	width:30px;
+	z-index:500;
+	-webkit-transform:scale(1);
+	-moz-transform:scale(1);
+	transform:scale(1);
+	-webkit-transition:color 0.2s, opacity 0.7s, -webkit-transform 0.6s;
+	-moz-transition:color 0.2s, opacity 0.7s, -moz-transform 0.6s;
+	transition:color 0.2s, opacity 0.7s, transform 0.6s;
+}
 
 
