--- a/Sport/assets/css/style.css
+++ b/Sport/assets/css/style.css
@@ -93,48 +93,7 @@ ul.latest-events li .flipping-albums-events .black-sec-tornament .underline-titl
 
 
 /*商家*/
-.carousel-arrows{
-	position:absolute;
-	top:-10px;
-	right:12%;
-}
-.carousel-arrows span{
-	display:inline-block;
-	width:30px;
-	height:30px;
-	text-align:center;
-	padding-top:3px;
-	color:#808ca4;
-	border-top:1px solid #f3f7fa;
-	border-bottom:1px solid #bfc8d7;
-	background:#e2eaf2;
-	cursor:pointer;
-	border-radius:3px;
-	-webkit-border-radius:3px;
-	-moz-border-radius:3px;
-	transition: background 0.3s, color 0.2s, border 0.3s;
-	-webkit-transition: background 0.3s, color 0.2s, border 0.3s;
-	-moz-transition: background 0.3s, color 0.2s, border 0.3s;
-    
-}
-.carousel-arrows .left-arrow{
-         background: #FF9740 url("../img/shop/left.png") no-repeat center center;
-}
-.carousel-arrows .left-arrow:hover {
-         background: #FF9740 url("../img/shop/left.png") no-repeat center center;
-}
-.carousel-arrows .right-arrow{
-        background: #FF9740 url("../img/shop/right.png") no-repeat center center;
-}
-.carousel-arrows .right-arrow:hover {
-        background: #FF9740 url("../img/shop/right.png") no-repeat center center;
-}
-.carousel-arrows span:hover{
-	color:#fff;
-	background:#63b2f5;
-	border-top-color:#7cc5f8;
-	border-bottom-color:#579dd9;
-}
+
 
 
 /*商家活动结束*/
@@ -456,7 +415,7 @@ h1.underline-title span{color:#444444;}
 .commercial-activity{ width:100%; height:30px; position:relative;}
 .gomore{color:#666;right: 10%;position: absolute;font-size:18px;}
 .gomore:hover{color:#FF9740;}
-.commercial-activity a.gomore{ font-size:11px; float:right;}
+
 .underline-bg{width:100%;background:#ebebeb;height:1px;position:relative;margin-bottom:-1px;z-index:0;margin-bottom:20px;}
 .underline-bg .underline{height:1px;width:45px;background:#8e44ad;position:relative;z-index:99;}
 .bg-audio-player{height:46px;}
@@ -553,9 +512,10 @@ h1.underline-title span{color:#444444;}
 
 
 
-.container-footer-top{background:rgba(255, 151, 64, 0.8);width:100%;border-top:3px solid #FFFF00;padding-top:50px;margin-bottom:1px; position:relative;}
+.container-footer-top{background:rgba(255, 151, 64, 0.8);width:100%;border-top:3px solid #FFFF00;padding-top:30px;margin-bottom:1px; position:relative;}
 .container-footer-top .container_12{ }
-.container-footer-top ul.footer-top-itm li.grid_3{color:#8f8f8f;font-size:13px;}
+.container-footer-top ul.footer-top-itm li.grid_3{font-size:13px;}
+.container-footer-top ul.footer-top-itm li.footer { margin-top:29px;}
 .container-footer-top ul.footer-top-itm li.grid_3 .logo-footer img{margin-bottom:30px !important;}
 .container-footer-top ul.footer-top-itm li.grid_3 p.italic{font-style:italic;font-weight:700;margin-bottom:20px;line-height:20px;}
 .container-footer-top ul.footer-top-itm li.grid_3 span{color:#d4d4d4;}
@@ -564,6 +524,7 @@ h1.underline-title span{color:#444444;}
 .container-footer-top ul.footer-top-itm li.grid_3 ul.recent-post-footer li a{color:#FFFFFF;-webkit-transition:all 0.2s linear;-moz-transition:all 0.2s linear;-o-transition:all 0.2s linear;-ms-transition:all 0.2s linear;transition:all 0.2s linear;}
 .container-footer-top ul.footer-top-itm li.omega ul.recent-post-footer li a:hover{color:#cf5dff;}
 .container-footer-top ul.footer-top-itm li.grid_3 ul.flickr-list-footer-top li{float:left;margin-right:4px;margin-bottom:2px;}
+.container-footer-top ul.footer-top-itm li.grid_3 ul.flickr-list-footer-top li img{width:100%;}
 .container-footer-top ul.footer-top-itm li.grid_3 ul.flickr-list-footer-top li:last-child{margin-right:0 !important;}
 .container-footer-bottom{background:rgba(51, 204, 153, 0.8);width:100%;height:65px;padding-top:25px; border:3px solid #F00;}
 .container-footer-top .grid_1{position:absolute; margin-left:90%; margin-top:10%;}
