--- a/Sport/FrontMasterPage.master
+++ b/Sport/FrontMasterPage.master
@@ -6,7 +6,7 @@
 <head runat="server">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title></title>
-     <link href="assets/css/style1.css" rel="stylesheet" type="text/css"/>
+     
      <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
      <link href="css/fontello.css" rel="stylesheet" type="text/css" />
 		<link href="css/flexslider.css" rel="stylesheet" type="text/css" />
@@ -88,7 +88,38 @@
 		        });
 
 		    });
-		</script>  	
+		</script>
+     <script src="assets/js/jquery.js"></script>
+  <script src="assets/js/component.js" type="text/javascript"></script>
+  <script src="assets/js/application.js" type="text/javascript"></script>
+  <script src="assets/js/easy-filter.js" type="text/javascript"></script><!-- jPlayer -->
+
+  <script src="assets/jplayer/jquery.jplayer.min.js" type="text/javascript"></script>
+  <script src="assets/js/accordion-tab.js" type="text/javascript"></script>
+  <script src="assets/js/tabbed-interface.js" type="text/javascript"></script>
+  <link href="assets/prettyPhoto/css/prettyPhoto.css" media=
+  "screen" rel="stylesheet" title="prettyPhoto main stylesheet" type=
+  "text/css"/>
+
+  
+  <script charset="utf-8" src="assets/prettyPhoto/js/jquery.prettyPhoto.js"
+  type="text/javascript"></script>
+  <script type="text/javascript">
+      $(document).ready(function () {
+          Application.init();
+          Component.Init();
+          EasyFiler.Init();
+      });
+  </script><!-- jQuery Revolution Slider  -->
+
+  <script src="assets/rs-plugin/js/jquery.themepunch.revolution.min.js" type=
+  "text/javascript"></script>
+
+  <link href="assets/css/style1.css" rel="stylesheet" type="text/css"/>
+
+  <script src="assets/js/jquery.nicescroll.min.js"></script>
+ 
+      	
     <asp:ContentPlaceHolder id="head" runat="server">
     </asp:ContentPlaceHolder>
 </head>
@@ -109,14 +140,10 @@
       </div>
       <div class="consumer">
       <ul>
-     <!--<li class="choise">
-      		<select class="select-header">
-            <option>广州</option>
-            <option>广州</option>
-            <option>广州</option>
-            <option>广州</option>
-            </select>
-      </li>-->
+    <li class="register-message">
+          <a href="#" class="register">用户登录</a><span> |</span>
+          <a href="#" class="message">用户注册</a>            
+      </li>
       </ul>
      
       </div>
@@ -333,6 +360,10 @@
   <div class="grid_1 omega">
         <a class="back-to-top template-based-element-background" href=
         "#"  ><span class="icon-back-to-top"></span></a>
+      <div class="toolbar">
+          <a href="###" class="toolbar-item toolbar-item-app">
+    <span class="toolbar-layer"></span></a>
+      </div>
       </div>
     <div class="container_12">
       <ul class="footer-top-itm">
@@ -340,102 +371,52 @@
           <a class="logo-footer" href="index.html"><img alt="Clubix Logo" src=
           "assets/img/logo.png" /></a>
 
-          <p class="italic">Lorem ipsum ex vix illud nonummy, novum tation et
-          his. At vix scriptaset patrioque scribentur, at pro fugit erts</p>
+          <p class="italic"></p>
 
-          <p class="italic">Srterem molestiae, sed et vivendo ali Lorem ipsum
-          ex vix illud nonummy, novum tation et his. At vix scripta</p>
+          
         </li>
 
         <li class="grid_3">
-          <h1 class="footer-top-title">Recent Posts</h1>
-
+          <h1 class="footer-top-title">让 约 运 动 更 简 单</h1>
           <ul class="recent-post-footer">
             <li>
-              <a class="template-based-element-color-hover" href=
-              "blog-page-single.html">Voluptas Sadips Ipsums Dolors</a>
+              <a class="template-based-element-color-hover" href="blog-page-single.html">运动热点</a>
+            </li>
+            <li>
+              <a class="template-based-element-color-hover" href="blog-page-single.html-2">商家活动</a>
+            </li>
+            <li>
+              <a class="template-based-element-color-hover" href="blog-page-single.html-3">约记分享</a>
             </li>
 
             <li>
-              <a class="template-based-element-color-hover" href=
-              "blog-page-single.html-2">Fugiats Litora Ultrices Ante</a>
-            </li>
-
-            <li>
-              <a class="template-based-element-color-hover" href=
-              "blog-page-single.html-3">Sapien Litora Dolores Ultrices</a>
-            </li>
-
-            <li>
-              <a class="template-based-element-color-hover" href=
-              "blog-page-single.html-4">Nemis Fugiats Voluptas Dolores</a>
+              <a class="template-based-element-color-hover" href="blog-page-single.html-4">运动装备</a>
             </li>
           </ul>
         </li>
 
-        <li class="grid_3">
-          <h1 class="footer-top-title">twitter</h1>
-
-          <ul class="twitter-footer-top">
+        <li class="grid_3 footer">
+         <ul class="recent-post-footer">
             <li>
-              <p class="italic"><span>@ dratio</span> Metus, id placerat justo
-              sagittis id.</p>
+              <a class="template-based-element-color-hover" href="blog-page-single.html">联系我们</a>
             </li>
-
             <li>
-              <p class="italic"><span>@ buris</span> Curabitur ultrices
-              sollicitudin metus, id placerat justo sagittis id... risus auctor
-              congue ac et risus.</p>
+              <a class="template-based-element-color-hover" href="blog-page-single.html-2">帮助中心</a>
             </li>
+            
           </ul>
         </li>
 
         <li class="grid_3">
-          <h1 class="footer-top-title">flickr</h1>
-
           <ul class="flickr-list-footer-top">
             <li>
-              <a href="#"><img alt="flickr" src=
-              "assets/img/flickr-img.png"></a>
+             <img alt="flickr" src="assets/img/web.jpg" />
             </li>
-
-            <li>
-              <a href="#"><img alt="flickr" src=
-              "assets/img/flickr-img.png"></a>
-            </li>
-
-            <li>
-              <a href="#"><img alt="flickr" src=
-              "assets/img/flickr-img.png"></a>
-            </li>
-
-            <li>
-              <a href="#"><img alt="flickr" src=
-              "assets/img/flickr-img.png"></a>
+              <li>
+             <img alt="flickr" src="assets/img/web2.jpg" />
             </li>
           </ul>
-
-          <ul class="flickr-list-footer-top">
-            <li>
-              <a href="#"><img alt="flickr" src=
-              "assets/img/flickr-img.png"></a>
-            </li>
-
-            <li>
-              <a href="#"><img alt="flickr" src=
-              "assets/img/flickr-img.png"></a>
-            </li>
-
-            <li>
-              <a href="#"><img alt="flickr" src=
-              "assets/img/flickr-img.png"></a>
-            </li>
-
-            <li>
-              <a href="#"><img alt="flickr" src=
-              "assets/img/flickr-img.png"></a>
-            </li>
-          </ul>
+         
         </li>
       </ul>
     </div>        
