--- a/Sport/assets/css/style1.css
+++ b/Sport/assets/css/style1.css
@@ -1,6 +1,7 @@
 ﻿ /* CSS crunched with Crunch - http://crunchapp.net/ */
-@import "css/reset.css";
+@import "css/reset1.css";
 @import "css/960.css";
+
 body{background:url(../img/bgimg.jpg) repeat; }
 .bg-header{background:rgba(100%, 59%, 25%, 1);height:93px;line-height:93px;position:relative;z-index:9999;}
 .bg-header .logo{margin-top:2px;margin-bottom:-6px;}
@@ -26,7 +27,8 @@ ul.sub-menu-header li a:hover,ul.sub-menu-header li a.selected-sub-menu{-webkit-
 .bg-header-menu .search form{float:right;}
 .bg-header-menu .search form .input-bg{-webkit-transition:all 0.2s linear;-moz-transition:all 0.2s linear;-o-transition:all 0.2s linear;-ms-transition:all 0.2s linear;transition:all 0.2s linear;background:#986AB7;width:85px;height:40px;line-height:38px;float:left;}
 .bg-header-menu .search form .input-bg input{-webkit-transition:all 0.2s linear;-moz-transition:all 0.2s linear;-o-transition:all 0.2s linear;-ms-transition:all 0.2s linear;transition:all 0.2s linear;width:65px;margin-left:10px;border:0 !important;padding:0 !important;outline:none !important;background:transparent;color:#FFFFFF;font-style:normal;font-size:12px;}
-.bg-header-menu .search form .bg-submit-search{-webkit-transition:all 0.2s linear;-moz-transition:all 0.2s linear;-o-transition:all 0.2s linear;-ms-transition:all 0.2s linear;transition:all 0.2s linear;width:35px;height:40px;background:#AA6DC5;float:left;}.bg-header-menu .search form .bg-submit-search input{-webkit-transition:all 0.2s linear;-moz-transition:all 0.2s linear;-o-transition:all 0.2s linear;-ms-transition:all 0.2s linear;transition:all 0.2s linear;background:transparent;border:0 !important;padding:0 !important;width:35px;height:40px;background:url(../img/search-header-icon.png) no-repeat center center;cursor:pointer;}
+.bg-header-menu .search form .bg-submit-search{-webkit-transition:all 0.2s linear;-moz-transition:all 0.2s linear;-o-transition:all 0.2s linear;-ms-transition:all 0.2s linear;transition:all 0.2s linear;width:35px;height:40px;background:#AA6DC5;float:left;}
+.bg-header-menu .search form .bg-submit-search input{-webkit-transition:all 0.2s linear;-moz-transition:all 0.2s linear;-o-transition:all 0.2s linear;-ms-transition:all 0.2s linear;transition:all 0.2s linear;background:transparent;border:0 !important;padding:0 !important;width:35px;height:40px;background:url(../img/search-header-icon.png) no-repeat center center;cursor:pointer;margin-top:3px;}
 .bg-header-menu .search:hover .input-bg{width:105px ;}.bg-header-menu .search:hover .input-bg input{width:85px;color:#FFFFFF;}
 .bg-header-menu .search:hover .bg-submit-search{background:#8e45ad;float:left;}.bg-header-menu .search:hover .bg-submit-search input{background:url(../img/search-header-icon-hover.png) no-repeat center center;}
 
@@ -82,6 +84,7 @@ ul.sub-menu-header li a:hover,ul.sub-menu-header li a.selected-sub-menu{-webkit-
 .widget .event-sidebar-block .container-information .time-left li p.type-time{border-color:#e2e2e2 !important;}
 .widget .event-sidebar-block .container-information .info ul.place-time-event-slider li p{color:#787878 !important;}
 
+
 .side-bar ul.list-play-list-side-bar li.sidebar-li-audio-player-01{width:300px;border-bottom:1px solid #dddddd;background:#e9e9e9;}
 .side-bar ul.list-play-list-side-bar li.sidebar-li-audio-player-01 .play-pause-sec{padding:14px 16px 13px 16px;width:11px;border-right:1px solid #dddddd;cursor:pointer;float:left;}.side-bar ul.list-play-list-side-bar li.sidebar-li-audio-player-01 .play-pause-sec .image-play-side-bar{display:block;width:11px;height:14px;background:url(../img/play-icon-2-side-bar.png) no-repeat center center;}
 .side-bar ul.list-play-list-side-bar li.sidebar-li-audio-player-01 .play-pause-sec .pause-side-bar{background:url(../img/pause-icon.png) no-repeat center center !important;}
@@ -105,21 +108,24 @@ ul.sub-menu-header li a:hover,ul.sub-menu-header li a.selected-sub-menu{-webkit-
 
 
 
-.container-footer-top{background:rgba(255, 151, 64, 0.8);width:100%;border-top:3px solid #FFFF00;padding-top:50px;margin-bottom:1px; position:relative;}
+.container-footer-top{background:rgba(255, 151, 64, 0.8);width:100%;border-top:3px solid #FFFF00;padding-top:30px;margin-bottom:1px; position:relative;}
 .container-footer-top .container_12{ }
-.container-footer-top ul.footer-top-itm li.grid_3{color:#8f8f8f;font-size:13px;}
+.container-footer-top ul.footer-top-itm li.grid_3{font-size:13px;}
+.container-footer-top ul.footer-top-itm li.footer { margin-top:29px;}
 .container-footer-top ul.footer-top-itm li.grid_3 .logo-footer img{margin-bottom:30px !important;}
 .container-footer-top ul.footer-top-itm li.grid_3 p.italic{font-style:italic;font-weight:700;margin-bottom:20px;line-height:20px;}
 .container-footer-top ul.footer-top-itm li.grid_3 span{color:#d4d4d4;}
-.container-footer-top ul.footer-top-itm li.grid_3 h1.footer-top-title{margin-bottom:30px;text-transform:uppercase;color:#FFFFFF;font-weight:700;margin-top:9px;}
+.container-footer-top ul.footer-top-itm li.grid_3 h1.footer-top-title{margin-bottom:15px;text-transform:uppercase;color:#FFFFFF;font-weight:700;font-size:14px;}
 .container-footer-top ul.footer-top-itm li.grid_3 ul.recent-post-footer li{padding-left:15px;background:url(../img/recent-post-arrow.png) no-repeat left center;margin-bottom:5px;line-height:20px;}
 .container-footer-top ul.footer-top-itm li.grid_3 ul.recent-post-footer li a{color:#FFFFFF;-webkit-transition:all 0.2s linear;-moz-transition:all 0.2s linear;-o-transition:all 0.2s linear;-ms-transition:all 0.2s linear;transition:all 0.2s linear;}
 .container-footer-top ul.footer-top-itm li.omega ul.recent-post-footer li a:hover{color:#cf5dff;}
 .container-footer-top ul.footer-top-itm li.grid_3 ul.flickr-list-footer-top li{float:left;margin-right:4px;margin-bottom:2px;}
+.container-footer-top ul.footer-top-itm li.grid_3 ul.flickr-list-footer-top li img{width:100%;}
 .container-footer-top ul.footer-top-itm li.grid_3 ul.flickr-list-footer-top li:last-child{margin-right:0 !important;}
 .container-footer-bottom{background:rgba(51, 204, 153, 0.8);width:100%;height:65px;padding-top:25px; border:3px solid #F00;}
+/*向上*/
 .container-footer-top .grid_1{position:absolute; margin-left:90%; margin-top:10%;}
-.back-to-top{width:36px;height:30px;padding-top:13px;background:#F3232B;display:block;color:#fff;position:fixed;bottom:80px;
+.back-to-top{width:36px;height:36px;padding-top:13px;background:#F3232B;display:block;color:#fff;position:fixed;bottom:80px;
 	right:80px;z-index:1000;
 	-webkit-border-radius:3px;
 	-moz-border-radius:3px;
@@ -127,6 +133,21 @@ ul.sub-menu-header li a:hover,ul.sub-menu-header li a.selected-sub-menu{-webkit-
 	-moz-transition:background 0.3s, color 0.2s;}
 .back-to-top:hover{background:#BF5357;}
 .back-to-top span.icon-back-to-top{margin:0 auto;width:9px;height:10px;display:block;background:url(../img/back-to-top-btn.png) no-repeat;}
+
+
+
+.toolbar-item,.toolbar-layer{background:url(../img/demobar5.jpg) no-repeat;}
+.toolbar{position:fixed;right:78px;bottom:120px;z-index: 10000}
+.toolbar-item{display:block;width:40px;height:48px;margin-top:1px;position:relative;-moz-transition:background-position 1s;-ms-transition:background-position 1s;-o-moz-transition:background-position 1s;-webkit-moz-transition:background-position 1s;transition:background-position 1s;}
+.toolbar-item:hover .toolbar-layer{opacity:1;filter:alpha(opacity=100);transform:scale(1);-webkit-transform:scale(1);-moz-transform:scale(1);-ms-transform:scale(1);-o-transform:scale(1);}
+.toolbar-item-app{background-position:0 -550px;}
+.toolbar-item-app:hover{background-position:0 -612px;}
+.toolbar-item-app .toolbar-layer{height:194px;background-position:0 -222px;}
+.toolbar-layer{position:absolute;right:56px;bottom:-10px;width:172px;opacity:0;filter:alpha(opacity=0);
+transform-origin: 95% 95%;-moz-transform-origin: 95% 95%;-ms-transform-origin: 95% 95%;-o-transform-origin: 95% 95%;-webkit-transform-origin: 95% 95%;transform:scale(0.01);
+-moz-transform:scale(0.01);-ms-transform:scale(0.01);-o-transform:scale(0.01);-webkit-transform:scale(0.01);transition:all 1s;-moz-transition:all 1s;-ms-transition:all 1s;-o-transition:all 1s;-webkit-transition:all 1s;}
+
+
 .container-footer-bottom .social-cr{margin-left:20px !important;}
 .container-footer-bottom .social-cr ul.social-footer-bottom{float:right;margin-bottom:7px;}
 .container-footer-bottom .social-cr ul.social-footer-bottom li{float:left;margin-left:20px;}
@@ -310,6 +331,7 @@ ul.list-simple-2 li a.bif-list{background:url(../img/bif-list.png) no-repeat lef
 .container-flip-caption img{-webkit-transition:0.5s;-o-transition:0.5s;transition:0.5s;}
 .container-flip-caption .caption{position:absolute;-webkit-transition:500ms;-o-transition:500ms;transition:500ms;top:0;left:0;width:100%;height:100%;-webkit-transform:rotateY(180deg);-ms-transform:rotateY(180deg);-o-transform:rotateY(180deg);transform:rotateY(180deg);-webkit-backface-visibility:hidden;-ms-backface-visibility:hidden;-o-backface-visibility:hidden;backface-visibility:hidden;}
 .read-more{-webkit-transition:all 0.2s linear;-moz-transition:all 0.2s linear;-o-transition:all 0.2s linear;-ms-transition:all 0.2s linear;transition:all 0.2s linear;}.read-more:hover{background:#DDDDDD !important;color:#8E44AD !important;}
+
 
 
 
