--- a/Sport/css/style1.css
+++ b/Sport/css/style1.css
@@ -1,4 +1,6 @@
 /*新前台母版样式*/
+.productpage-bar {background:rgba(14,14,14,0.2);margin-top:30px;}
+#content {background:url(../img/body-background.jpg) repeat;}
 #Entry 
 {    
     font-size:12px;
@@ -21,9 +23,6 @@
 	color:#F90;
 	text-decoration:underline;
 }
-.footer{
-    text-align:center;
-}
 
 
 html{
@@ -34,7 +33,7 @@ body{
 	overflow:hidden;
 	font: 15px/23px 'Open Sans', Segoe UI, Arial, sans-serif;
 	color:#3e474c;
-	background:url(../img/body-background.jpg) repeat;
+	
 }
 
 body.boxed-layout{
@@ -128,10 +127,12 @@ iframe{
 /* ==================================== */
 
 h1{
-	font-size:30px;
-	font-weight:800;
-	text-transform:uppercase;
-	margin:30px 0 20px;
+	float: left;
+color: #444;
+font-size: 24px;
+font-weight: 200;
+margin-top:10px;
+margin-left:10px;
 }
 
 h2{
@@ -871,8 +872,7 @@ h6.shortcodes-caption{
 
 
 .section{
-	padding:30px 0;
-	background:#fff;
+	padding:10px 0;
 }
 
 .section.full-width-slider-section{
@@ -913,8 +913,7 @@ h6.shortcodes-caption{
 }
 
 .gray-bg{
-	background:#f2f4f9;
-	padding-top:60px;
+	
 	padding-bottom:60px;
 }
 
@@ -3012,6 +3011,7 @@ button.small{
 .shopping-cart{
 	display:inline-block;
 	position:relative;
+    right:-78%;
 }
 
 .cart-button{
@@ -3135,12 +3135,13 @@ button.small{
 }
 
 .cart-item>a.button{
-	padding-left:10px;
+	padding-left:20px;
 	padding-right:10px;
 	margin-top:5px;
 	margin-bottom:5px;
-	font-size:13px;
+	font-size:16px;
 	text-transform:uppercase!important;
+    
 }
 
 
@@ -5185,6 +5186,8 @@ button{
 	transition:background 0.3s, color 0.2s, border 0.3s;
 	-webkit-transition:background 0.3s, color 0.2s, border 0.3s;
 	-moz-transition:background 0.3s, color 0.2s, border 0.3s;
+    height:35px;
+    width:85px;
 }
 
 a.button.big,
@@ -5208,6 +5211,8 @@ button.donate{
 	border-bottom-color:#911f0f;
 	color:#fff;
 	text-transform:none;
+    height:35px;
+    width:85px;
 }
 
 a.button.donate.button-arrow:after,
