--- a/Sport/assets/css/style1.css
+++ b/Sport/assets/css/style1.css
@@ -119,7 +119,7 @@ ul.sub-menu-header li a:hover,ul.sub-menu-header li a.selected-sub-menu{-webkit-
 .container-footer-top ul.footer-top-itm li.grid_3 .logo-footer img{margin-bottom:30px !important;}
 .container-footer-top ul.footer-top-itm li.grid_3 p.italic{font-style:italic;font-weight:700;margin-bottom:20px;line-height:20px;}
 .container-footer-top ul.footer-top-itm li.grid_3 span{color:#d4d4d4;}
-.container-footer-top ul.footer-top-itm li.grid_3 h1.footer-top-title{margin-bottom:15px;text-transform:uppercase;color:#FFFFFF;font-weight:700;font-size:14px;}
+.container-footer-top ul.footer-top-itm li.grid_3 .footer-top-title{margin-bottom:15px;text-transform:uppercase;color:#FFFFFF;font-weight:700;font-size:14px;}
 .container-footer-top ul.footer-top-itm li.grid_3 ul.recent-post-footer li{padding-left:15px;background:url(../img/recent-post-arrow.png) no-repeat left center;margin-bottom:5px;line-height:20px;}
 .container-footer-top ul.footer-top-itm li.grid_3 ul.recent-post-footer li a{color:#FFFFFF;-webkit-transition:all 0.2s linear;-moz-transition:all 0.2s linear;-o-transition:all 0.2s linear;-ms-transition:all 0.2s linear;transition:all 0.2s linear;}
 .container-footer-top ul.footer-top-itm li.omega ul.recent-post-footer li a:hover{color:#cf5dff;}
